--- a/index.html
+++ b/index.html
@@ -4,7 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/css/style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;700&display=swap"
+      rel="stylesheet"
+    />
+
     <title>Html Css Toboolist</title>
   </head>
-  <body></body>
+
+  <body>
+    <!-- A. HEADER -->
+    <header>
+      <div class="logo">
+        <img src="./assets/immagini/Logo.png" alt="Logo" />
+        <h1>Toboolist</h1>
+      </div>
+    </header>
+  </body>
 </html>
