+ sezione principale bianca

--- a/index.html
+++ b/index.html
@@ -20,5 +20,15 @@
         <h1>Toboolist</h1>
       </div>
     </header>
+
+    <!-- B. MAIN -->
+    <main>
+      <!-- C. SEZIONE PRINCIPALE -->
+      <section class="sezioneprincipale">
+        <!-- D. DOPPIA OPTION -->
+        <div class="doppiaoption"></div>
+      </section>
+    </main>
+    <!--  -->
   </body>
 </html>
