+ sezione doppia etichetta e titolo tendina

--- a/index.html
+++ b/index.html
@@ -26,7 +26,22 @@
       <!-- C. SEZIONE PRINCIPALE -->
       <section class="sezioneprincipale">
         <!-- D. DOPPIA OPTION -->
-        <div class="doppiaoption"></div>
+        <div class="doppiaoption">
+          <p>
+            <span class="bazzurro angolosmussato etichettacolorata"
+              >Add Task</span
+            >
+          </p>
+          <p>
+            <span class="angolosmussato etichettabianca">Add Task</span>
+          </p>
+        </div>
+
+        <!-- E. TENDINA 1 -->
+        <div class="tendina titolotendina">
+          <span class="allineamentoverticale">&#9660;</span>
+          <h4 class="fontgrassetto">New Task</h4>
+        </div>
       </section>
     </main>
     <!--  -->
