+ primo item tendina

--- a/index.html
+++ b/index.html
@@ -38,9 +38,20 @@
         </div>
 
         <!-- E. TENDINA 1 -->
-        <div class="tendina titolotendina">
-          <span class="allineamentoverticale">&#9660;</span>
-          <h4 class="fontgrassetto">New Task</h4>
+        <div class="tendina">
+          <!-- TITOLO TENDINA -->
+          <div class="titoloeitemtendina">
+            <span class="icona">&#9660;</span>
+            <h4 class="fontgrassetto">New Task</h4>
+          </div>
+          <!-- ITEM TENDINA -->
+          <div class="titoloeitemtendina">
+            <span class="icona iconacolorata">&#9660;</span>
+            <p>Quarterly Newsletter</p>
+            <span class="bazzurro etichettacolorata angolorotondo"
+              >Editorial</span
+            >
+          </div>
         </div>
       </section>
     </main>
