--- a/index.html
+++ b/index.html
@@ -40,14 +40,87 @@
         <!-- E. TENDINA 1 -->
         <div class="tendina">
           <!-- TITOLO TENDINA -->
-          <div class="titoloeitemtendina">
+          <div class="allineamentotitoloeitemtendina">
             <span class="icona">&#9660;</span>
             <h4 class="fontgrassetto">New Task</h4>
           </div>
-          <!-- ITEM TENDINA -->
-          <div class="titoloeitemtendina">
-            <span class="icona iconacolorata">&#9660;</span>
+          <!-- ITEM TENDINA 1-->
+          <div class="allineamentotitoloeitemtendina">
+            <span class="icona iconacolorataverde iconaround">&#10003;</span>
             <p>Quarterly Newsletter</p>
+            <span class="bazzurro etichettacolorata angolorotondo"
+              >Editorial</span
+            >
+          </div>
+        </div>
+
+        <!-- E. TENDINA 2 -->
+        <div class="tendina">
+          <!-- TITOLO TENDINA -->
+          <div class="allineamentotitoloeitemtendina">
+            <span class="icona">&#9660;</span>
+            <h4 class="fontgrassetto">Today</h4>
+          </div>
+          <!-- ITEM TENDINA 1-->
+          <div class="allineamentotitoloeitemtendina">
+            <span class="icona iconacolorataverde iconaround">&#10003;</span>
+            <p>Recruting blog post</p>
+            <span class="bazzurro etichettacolorata angolorotondo"
+              >Editorial</span
+            >
+          </div>
+          <!-- ITEM TENDINA 2-->
+          <div class="allineamentotitoloeitemtendina">
+            <span class="icona iconacolorataverde iconaround">&#10003;</span>
+            <p>Mobile app</p>
+            <span class="bviola etichettacolorata angolorotondo">Q1 Goals</span>
+          </div>
+          <!-- ITEM TENDINA 3-->
+          <div class="allineamentotitoloeitemtendina">
+            <span class="icona iconacoloratarosso iconaround">&#10006;</span>
+            <p>Interview John H.</p>
+            <span class="bverdeacqua etichettacolorata angolorotondo"
+              >Recruting</span
+            >
+          </div>
+          <!-- ITEM TENDINA 4-->
+          <div class="allineamentotitoloeitemtendina">
+            <span class="icona iconacolorataverde iconaround">&#10003;</span>
+            <p>Summit update to mobile</p>
+            <span class="barancio etichettacolorata angolorotondo">Mobile</span>
+          </div>
+        </div>
+
+        <!-- E. TENDINA 2 -->
+        <div class="tendina">
+          <!-- TITOLO TENDINA -->
+          <div class="allineamentotitoloeitemtendina">
+            <span class="icona">&#9660;</span>
+            <h4 class="fontgrassetto">Upcoming</h4>
+          </div>
+          <!-- ITEM TENDINA 1-->
+          <div class="allineamentotitoloeitemtendina">
+            <span class="icona iconacoloratarosso iconaround">&#10006;</span>
+            <p>Schedule meeting with Alex</p>
+          </div>
+          <!-- ITEM TENDINA 2-->
+          <div class="allineamentotitoloeitemtendina">
+            <span class="icona iconacolorataverde iconaround">&#10003;</span>
+            <p>Homepage refresh</p>
+            <span class="bfucsia etichettacolorata angolorotondo">Website</span>
+          </div>
+          <!-- ITEM TENDINA 3-->
+          <div class="allineamentotitoloeitemtendina">
+            <span class="icona iconacolorataverde iconaround">&#10003;</span>
+            <p>Onboard new sales team members</p>
+            <span class="bverdechiaro etichettacolorata angolorotondo"
+              >Sales</span
+            >
+          </div>
+          <!-- ITEM TENDINA 4-->
+          <div class="allineamentotitoloeitemtendina">
+            <span class="icona iconacolorataverde iconaround">&#10003;</span>
+            <p>Review editorial calendar</p>
             <span class="bazzurro etichettacolorata angolorotondo"
               >Editorial</span
             >
